1.3-8   Sep 19, 1999  Introduced Wayne Roberts Win32 code. 
                      CLOCAL added to c_cflags.  (How did it get out?)
                      Several configure fixes for common problems.
1.3-7   Aug 15, 1999  More Threshold and Timeout fixes.  Tried to get Printer
                      support working with linux-2.2.11.   More work needed 
                      there.  Comtrol card support by Ken Thompson 
                      thompson@milestonesolutions.com.
1.3-6   Aug 3, 1999   Threshold and Timeout typo fixes in SerialImp.c.  
1.3-5   Jul 26, 1999  Threshold and Timeout implemented on native side.  default
                      on open is to block.  Hope this doesnt fill the mailbox.
1.3-4   Jul 26, 1999  Printer port fixes Holger Lehmann <holle@almaden.ibm.com>
                      minor build fixes
                      intelligent port identification
                      merg of many small changes from cvs.
                      moved to automake-1.4a libtool-1.2f make-3.77
1.3-3   Apr 29, 1999  flow Control corrections Neil Darlow and Chris Kakris
                      software flow control implementation Neil Darlow
                      close fixes and exception cleanup Douglas Lau
                      build modifications 
                      Documentation updates
                      counter rollover fixes for events Neil Darlow
                      Minor changes to read 
1.3-2   Mar 27, 1999  When throwing exceptions, include the method name in the 
                      message string.  Douglas Lau
                      fixes for close() drop DSR and DTR call super.close()
                      Wayne Roberts and Douglas Lau
                      fixes fo readArray() used IndexArrayOutOfBoundsException
                      return 0 on readArray(0);  Douglas Lau and Will Kassebaum                       <wrk@kassebaum.net>
                      fix for drain().  retry on EINTR Daniel Lintjens 