@@ -1,6 +1,8 @@
 This package is not the result of one persons time.  Recognition is given
 to the following people for their assistance.
 
+Stuart Anderson <anderson@metrolink.com>  netbsd port
+
 Ken Thompson <thompson@milestonesolutions.com>  Comtrol RocketPort serial boards
    support.
 
