@@ -98,3 +98,5 @@ Known 'Features'.
 
 	 portDisp = new SerialPortDisplay[50];
 
+
+Older Linux Systems (libc5) should upgrade to a glibc system with libpthread-0.7 or newer.  We have run into many problems with older libraries.  SIGSEGV was the most common symptom.  Reported by  Peter Bennett <bencom@bencom.co.nz>
